--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,8 +82,7 @@ jobs:
 
       with:
 
-        cli_config_credentials_token: 1aOdEMCmycldeg.atlasv1.OwrapfNqIoPAPFIbAYUwXGfM7wTcba0CKGwJkjJSPHhMgN1xzVUuLSpBcLz5bjjcm8w
-
+        cli_config_credentials_token: 1wyT0GxgjgIbpg.atlasv1.AEsOgAUmYyC9nMLXydhusy9pb3zmzCwyP5yN5OB8ERnZnsfzXwAnrG3ktxnaGtYlfyk
 
 
 
