--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,7 +82,7 @@ jobs:
 
       with:
 
-        cli_config_credentials_token: 1wyT0GxgjgIbpg.atlasv1.AEsOgAUmYyC9nMLXydhusy9pb3zmzCwyP5yN5OB8ERnZnsfzXwAnrG3ktxnaGtYlfyk
+        cli_config_credentials_token: UTnoO4FqtzBlsw.atlasv1.wgcI7nNH6W5zWZifxAu6PRktCZ5wXNQmXOts31721ve2SDoLQbUjiW7oWxaZqLZN5jU
 
 
 
