--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,7 +82,7 @@ jobs:
 
       with:
 
-        cli_config_credentials_token: UTnoO4FqtzBlsw.atlasv1.wgcI7nNH6W5zWZifxAu6PRktCZ5wXNQmXOts31721ve2SDoLQbUjiW7oWxaZqLZN5jU
+        cli_config_credentials_token: vDjumoyg9YC99g.atlasv1.2KH9phE6So8tPzXEQgEsVKvetzkaWhEr7cZmkXMBaZI4z4VeDpHBBawvaTbqqt3Kp4w
 
 
 
