--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,7 +82,7 @@ jobs:
 
       with:
 
-        cli_config_credentials_token: vDjumoyg9YC99g.atlasv1.2KH9phE6So8tPzXEQgEsVKvetzkaWhEr7cZmkXMBaZI4z4VeDpHBBawvaTbqqt3Kp4w
+        cli_config_credentials_token: NbuKAxxvyOFVDA.atlasv1.64N1NjckttmJH1SvzixzYuMrq5ymTwJzPw9eGqbGrWmjzCIzFp5q6VnBAXsagY73tXk
 
 
 
