--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,7 +82,7 @@ jobs:
 
       with:
 
-        cli_config_credentials_token: NbuKAxxvyOFVDA.atlasv1.64N1NjckttmJH1SvzixzYuMrq5ymTwJzPw9eGqbGrWmjzCIzFp5q6VnBAXsagY73tXk
+        cli_config_credentials_token: zuHqQv1IHFAjqA.atlasv1.s7hzf5ppB4mGCjMpAsYa1yUpYRkSen3JDGMBk5NvWDAypbZjwpVE1oDRjrKgMEmdJHE
 
 
 
