--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,7 +47,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    environment: production
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ASSCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
+      AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+
 
 
 
